--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,21 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background: linear-gradient(
+      rgba(255,255,255,0.7),
+      rgba(255,255,255,0.3),
+    ),
+    url();
+    background-size: cover;
+    background-position: center;
+
+  }
+
+
+  form{
+    background-color: white;
+    padding: 0px 60px;
+    border-radius: 10px;
   }
   
   
