--- a/src/app.css
+++ b/src/app.css
@@ -5,9 +5,9 @@
     height: 100vh;
     background: linear-gradient(
       rgba(255,255,255,0.7),
-      rgba(255,255,255,0.3),
+      rgba(255,255,255,0.3)
     ),
-    url();
+    url("https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
     background-size: cover;
     background-position: center;
 
@@ -20,4 +20,24 @@
     border-radius: 10px;
   }
   
+  h1 {
+    color: rgb(77,1,77);
+    text-align: center;
+  }
+
+  button{
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    border: none;
+    background-color: rebeccapurple;
+    color: white;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-bottom: 30px;
+   
+  }
   
